Fix: mobile post title spacing

--- a/assets/css/page.css
+++ b/assets/css/page.css
@@ -32,7 +32,7 @@
 
 .page--content .post--content h2 {
   line-height: 1.35;
-  margin-top: -5px;
+  margin-top: 0;
 }
 
 .single h2 {
